# chip8

./: CMakeLists.txt  README.org  build.sh  notes.org
lib/chip8/: CMakeLists.txt  array_rom.hpp  chip8.cpp  chip8.hpp  chip8_config.cpp  chip8_config.hpp  chip8_input.hpp  chip8_interface.cpp  chip8_interface.hpp  file_rom.cpp  file_rom.hpp  font.hpp  instruction.cpp  instruction.hpp  irom.hpp  key_code.cpp  key_code.hpp
lib/emacs-module/: CMakeLists.txt  emacs-module.h
lib/emacs_frontend/: CMakeLists.txt  emacs_frontend.cpp  emacs_frontend.hpp
lib/emacs_impl/: CMakeLists.txt  emacs_impl.cpp  emacs_impl.hpp
lib/terminal_frontend/: CMakeLists.txt  terminal_frontend.cpp  terminal_frontend.hpp  terminal_input.cpp  terminal_input.hpp
src/: CMakeLists.txt  chip8_terminal_input.hpp  main.cpp
test/: CMakeLists.txt  chip8_tests.cpp  helper.cpp  helper.hpp  instruction_tests.cpp  test.cpp
test/instructions/: add.cpp  add_registers.cpp  add_to_index.cpp  binary_and.cpp  binary_coded_decimal_conversion.cpp  binary_or.cpp  binary_xor.cpp  clear_screen.cpp  clear_screen_test.cpp  display.cpp  font_character.cpp  get_key.cpp  jump.cpp  jumpWithOffset.cpp  jump_test.cpp  load_memory.cpp  random.cpp  set.cpp  set_index_register.cpp  set_register_x_to_y.cpp  shift.cpp  skip.cpp  skip_if.cpp  store_memory.cpp  subroutine.cpp  subroutine_test.cpp  subtract.cpp  timers.cpp
